--- a/flying-saucer-core/pom.xml
+++ b/flying-saucer-core/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.xhtmlrenderer</groupId>
     <artifactId>flying-saucer-parent</artifactId>
-    <version>9.1.12</version>
+    <version>9.1.99-SNAPSHOT</version>
   </parent>
 
   <artifactId>flying-saucer-core</artifactId>
