--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
     <module>flying-saucer-swt-examples</module>
     <module>flying-saucer-examples</module>
     <module>flying-saucer-fop</module>
+    <module>flying-saucer-docx4j</module>
   </modules>
 
   <scm>
