--- a/flying-saucer-core/pom.xml
+++ b/flying-saucer-core/pom.xml
@@ -37,6 +37,11 @@
       <version>4.10</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+     <groupId>jakarta.xml.bind</groupId>
+     <artifactId>jakarta.xml.bind-api</artifactId>
+     <version>3.0.0-RC3</version>
+    </dependency>
   </dependencies>
 
   <build>
